# kubepilot

./: README.md  pyproject.toml
environments/: crash_loop.yaml  create_cluster.sh  delete_cluster.sh  network_issue.yaml  oom_killed.yaml
scripts/: demo.py  main.py
src/kubepilot/agent/: base.py  react_agent.py
src/kubepilot/llm/: base.py  factory.py  ollama.py
src/kubepilot/prompts/: diagnose_prompt.py
src/kubepilot/tools/: k8s.py
