[project]
name = "kubepilot"
version = "0.1.0"
description = "Kubernetes Pilot by Autonomous AI Agents"
authors = [
    {name = "Jing Ai",email = "jingairpi@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
black = "^24.0.0"
